--- a/src/index.html
+++ b/src/index.html
@@ -1,107 +1,110 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
 
 <head>
-	<meta charset="utf-8">
-	<title>Facto Valid 2.0</title>
-	<base href="./">
-	<meta http-equiv="X-UA-Compatible" content="IE=11" />
+  <meta charset="utf-8">
+  <title>Facto Valid 2.0</title>
+  <base href="./">
+  <meta http-equiv="X-UA-Compatible" content="IE=11" />
 
-	<!-- ================== Ignorar Cache ================== -->
-	<meta http-equiv="Last-Modified" content="0">
-	<meta http-equiv="Cache-Control" content="no-cache, mustrevalidate">
-	<meta http-equiv="Pragma" content="no-cache">
-	<!-- ========================================================== -->
-
-
-	<!-- ================== BEGIN BASE CSS STYLE ================== -->
-	<link href="./assets/plugins/bootstrap/4.1.0/css/bootstrap.min.css" rel="stylesheet" />
-	<link href="./assets/plugins/font-awesome/5.0/css/fontawesome-all.min.css" rel="stylesheet" />
-	<link href="./assets/plugins/animate/animate.min.css" rel="stylesheet" />
+  <!-- ================== Ignorar Cache ================== -->
+  <meta http-equiv="Last-Modified" content="0">
+  <meta http-equiv="Cache-Control" content="no-cache, mustrevalidate">
+  <meta http-equiv="Pragma" content="no-cache">
+  <!-- ========================================================== -->
 
 
+  <!-- ================== BEGIN BASE CSS STYLE ================== -->
+  <link href="./assets/plugins/bootstrap/4.1.0/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="./assets/plugins/font-awesome/5.0/css/fontawesome-all.min.css" rel="stylesheet" />
+  <link href="./assets/plugins/animate/animate.min.css" rel="stylesheet" />
 
-	<link href="./assets/css/default/style.min.css" rel="stylesheet" />
-	<link href="./assets/css/default/style-responsive.min.css" rel="stylesheet" />
-	<link href="./assets/css/auxiliar.css" rel="stylesheet" id="theme" />
 
 
-	<!-- ================== BEGIN PAGE LEVEL STYLE ================== -->
-	<link href="./assets/plugins/gritter/css/jquery.gritter.css" rel="stylesheet" />
-	<!-- ================== END PAGE LEVEL STYLE ================== -->
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="icon" type="image/x-icon" href="assets//img//logo/favicon-16x16.png">
+  <link href="./assets/css/default/style.min.css" rel="stylesheet" />
+  <link href="./assets/css/default/style-responsive.min.css" rel="stylesheet" />
+  <link href="./assets/css/auxiliar.css" rel="stylesheet" id="theme" />
+
+
+  <!-- ================== BEGIN PAGE LEVEL STYLE ================== -->
+  <link href="./assets/plugins/gritter/css/jquery.gritter.css" rel="stylesheet" />
+  <!-- ================== END PAGE LEVEL STYLE ================== -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="assets//img//logo/favicon-16x16.png">
 </head>
 
 <body>
-	<app-root></app-root>
+  <app-root></app-root>
 
-	<!-- ================== BEGIN BASE JS ================== -->
-	<script src="./assets/plugins/jquery/jquery-3.2.1.min.js"></script>
-	<script src="./assets/plugins/jquery/jquery-3.2.1.min.js"></script>
-	<script src="./assets/plugins/jquery-ui/jquery-ui.min.js"></script>
-	<script src="./assets/plugins/bootstrap/4.1.0/js/bootstrap.bundle.min.js"></script>
-	<!--[if lt IE 9]>
+  <!-- ================== BEGIN BASE JS ================== -->
+  <script src="./assets/plugins/jquery/jquery-3.2.1.min.js"></script>
+  <script src="./assets/plugins/jquery/jquery-3.2.1.min.js"></script>
+  <script src="./assets/plugins/jquery-ui/jquery-ui.min.js"></script>
+  <script src="./assets/plugins/bootstrap/4.1.0/js/bootstrap.bundle.min.js"></script>
+  <!--[if lt IE 9]>
 		<script src="./assets/crossbrowserjs/html5shiv.js"></script>
 		<script src="./assets/crossbrowserjs/respond.min.js"></script>
 		<script src="./assets/crossbrowserjs/excanvas.min.js"></script>
 	<![endif]-->
-	<script src="./assets/plugins/slimscroll/jquery.slimscroll.min.js"></script>
-	<script src="./assets/plugins/js-cookie/js.cookie.js"></script>
-	<script src="./assets/js/theme/default.min.js"></script>
+  <script src="./assets/plugins/slimscroll/jquery.slimscroll.min.js"></script>
+  <script src="./assets/plugins/js-cookie/js.cookie.js"></script>
+  <script src="./assets/js/theme/default.min.js"></script>
 
-	<script src="./assets/js/apps.min.js"></script>
-	<!-- ================== END BASE JS ================== -->
+  <script src="./assets/js/apps.min.js"></script>
+  <!-- ================== END BASE JS ================== -->
 
-	<!-- ================== BEGIN PAGE LEVEL JS ================== -->
-	<script src="./assets/plugins/gritter/js/jquery.gritter.min.js"></script>
-	<script src="./assets/plugins/sparkline/jquery.sparkline.min.js"></script>
-	<script src="./assets/js/demo/dashboard.min.js"></script>
-	<!-- ================== END PAGE LEVEL JS ================== -->
-	<link href="./assets/plugins/DataTables/media/css/dataTables.bootstrap.min.css" rel="stylesheet" />
-	<link href="./assets/plugins/DataTables/extensions/Buttons/css/buttons.bootstrap.min.css" rel="stylesheet" />
-	<link href="./assets/plugins/DataTables/extensions/Responsive/css/responsive.bootstrap.min.css" rel="stylesheet" />
-	<link href="./assets/plugins/DataTables/extensions/AutoFill/css/autoFill.bootstrap.min.css" rel="stylesheet" />
-	<link href="./assets/plugins/DataTables/extensions/ColReorder/css/colReorder.bootstrap.min.css" rel="stylesheet" />
-	<link href="./assets/plugins/DataTables/extensions/KeyTable/css/keyTable.bootstrap.min.css" rel="stylesheet" />
-	<link href="./assets/plugins/DataTables/extensions/RowReorder/css/rowReorder.bootstrap.min.css" rel="stylesheet" />
-	<link href="./assets/plugins/DataTables/extensions/Select/css/select.bootstrap.min.css" rel="stylesheet" />
+  <!-- ================== BEGIN PAGE LEVEL JS ================== -->
+  <script src="./assets/plugins/gritter/js/jquery.gritter.min.js"></script>
+  <script src="./assets/plugins/sparkline/jquery.sparkline.min.js"></script>
+  <script src="./assets/js/demo/dashboard.min.js"></script>
+  <!-- ================== END PAGE LEVEL JS ================== -->
+  <link href="./assets/plugins/DataTables/media/css/dataTables.bootstrap.min.css" rel="stylesheet" />
+  <link href="./assets/plugins/DataTables/extensions/Buttons/css/buttons.bootstrap.min.css" rel="stylesheet" />
+  <link href="./assets/plugins/DataTables/extensions/Responsive/css/responsive.bootstrap.min.css" rel="stylesheet" />
+  <link href="./assets/plugins/DataTables/extensions/AutoFill/css/autoFill.bootstrap.min.css" rel="stylesheet" />
+  <link href="./assets/plugins/DataTables/extensions/ColReorder/css/colReorder.bootstrap.min.css" rel="stylesheet" />
+  <link href="./assets/plugins/DataTables/extensions/KeyTable/css/keyTable.bootstrap.min.css" rel="stylesheet" />
+  <link href="./assets/plugins/DataTables/extensions/RowReorder/css/rowReorder.bootstrap.min.css" rel="stylesheet" />
+  <link href="./assets/plugins/DataTables/extensions/Select/css/select.bootstrap.min.css" rel="stylesheet" />
 
-	<script src="./assets/plugins/DataTables/media/js/jquery.dataTables.min.js"></script>
-	<script src="./assets/plugins/DataTables/media/js/dataTables.bootstrap.min.js"></script>
-	<script src="./assets/plugins/DataTables/extensions/Buttons/js/dataTables.buttons.min.js"></script>
-	<script src="./assets/plugins/DataTables/extensions/Buttons/js/buttons.bootstrap.min.js"></script>
-	<script src="./assets/plugins/DataTables/extensions/Buttons/js/buttons.flash.min.js"></script>
-	<script src="./assets/plugins/DataTables/extensions/Buttons/js/jszip.min.js"></script>
-	<script src="./assets/plugins/DataTables/extensions/Buttons/js/pdfmake.min.js"></script>
-	<script src="./assets/plugins/DataTables/extensions/Buttons/js/vfs_fonts.min.js"></script>
-	<script src="./assets/plugins/DataTables/extensions/Buttons/js/buttons.html5.min.js"></script>
-	<script src="./assets/plugins/DataTables/extensions/Buttons/js/buttons.print.min.js"></script>
-	<script src="./assets/plugins/DataTables/extensions/Responsive/js/dataTables.responsive.min.js"></script>
-	<script src="./assets/plugins/DataTables/extensions/AutoFill/js/dataTables.autoFill.min.js"></script>
-	<script src="./assets/plugins/DataTables/extensions/ColReorder/js/dataTables.colReorder.min.js"></script>
-	<script src="./assets/plugins/DataTables/extensions/KeyTable/js/dataTables.keyTable.min.js"></script>
-	<script src="./assets/plugins/DataTables/extensions/RowReorder/js/dataTables.rowReorder.min.js"></script>
-	<script src="./assets/plugins/DataTables/extensions/Select/js/dataTables.select.min.js"></script>
+  <script src="./assets/plugins/DataTables/media/js/jquery.dataTables.min.js"></script>
+  <script src="./assets/plugins/DataTables/media/js/dataTables.bootstrap.min.js"></script>
+  <script src="./assets/plugins/DataTables/extensions/Buttons/js/dataTables.buttons.min.js"></script>
+  <script src="./assets/plugins/DataTables/extensions/Buttons/js/buttons.bootstrap.min.js"></script>
+  <script src="./assets/plugins/DataTables/extensions/Buttons/js/buttons.flash.min.js"></script>
+  <script src="./assets/plugins/DataTables/extensions/Buttons/js/jszip.min.js"></script>
+  <script src="./assets/plugins/DataTables/extensions/Buttons/js/pdfmake.min.js"></script>
+  <script src="./assets/plugins/DataTables/extensions/Buttons/js/vfs_fonts.min.js"></script>
+  <script src="./assets/plugins/DataTables/extensions/Buttons/js/buttons.html5.min.js"></script>
+  <script src="./assets/plugins/DataTables/extensions/Buttons/js/buttons.print.min.js"></script>
+  <script src="./assets/plugins/DataTables/extensions/Responsive/js/dataTables.responsive.min.js"></script>
+  <script src="./assets/plugins/DataTables/extensions/AutoFill/js/dataTables.autoFill.min.js"></script>
+  <script src="./assets/plugins/DataTables/extensions/ColReorder/js/dataTables.colReorder.min.js"></script>
+  <script src="./assets/plugins/DataTables/extensions/KeyTable/js/dataTables.keyTable.min.js"></script>
+  <script src="./assets/plugins/DataTables/extensions/RowReorder/js/dataTables.rowReorder.min.js"></script>
+  <script src="./assets/plugins/DataTables/extensions/Select/js/dataTables.select.min.js"></script>
 
 
-	<link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/css/select2.min.css" rel="stylesheet" />
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/js/select2.min.js"></script>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/css/select2.min.css" rel="stylesheet" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/js/select2.min.js"></script>
 
-  <link href="//cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.0/bootstrap3-editable/css/bootstrap-editable.css" rel="stylesheet"/>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.0/bootstrap3-editable/js/bootstrap-editable.min.js"></script>
+  <link href="//cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.0/bootstrap3-editable/css/bootstrap-editable.css"
+    rel="stylesheet" />
+  <script
+    src="//cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.0/bootstrap3-editable/js/bootstrap-editable.min.js"></script>
   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.10/jquery.mask.js"></script> -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-maskmoney/3.0.2/jquery.maskMoney.min.js" type="text/javascript"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-maskmoney/3.0.2/jquery.maskMoney.min.js"
+    type="text/javascript"></script>
 
-	<script src="node_modules/systemjs/dist/system-polyfills.js"></script>
+  <script src="node_modules/systemjs/dist/system-polyfills.js"></script>
 
-	<script>
-		$(document).ready(function () {
-			App.init();
-			Dashboard.init();
-			$('[data-toggle="tooltip"]').tooltip();
-		});
-	</script>
+  <script>
+    $(document).ready(function () {
+      App.init();
+      Dashboard.init();
+      $('[data-toggle="tooltip"]').tooltip();
+    });
+  </script>
 
 </body>
 
