--- a/src/index.html
+++ b/src/index.html
@@ -6,35 +6,23 @@
   <title>Facto Valid 2.0</title>
   <base href="./">
   <meta http-equiv="X-UA-Compatible" content="IE=11" />
-
   <!-- ================== Ignorar Cache ================== -->
   <meta http-equiv="Last-Modified" content="0">
   <meta http-equiv="Cache-Control" content="no-cache, mustrevalidate">
   <meta http-equiv="Pragma" content="no-cache">
   <!-- ========================================================== -->
-
-
   <!-- ================== BEGIN BASE CSS STYLE ================== -->
   <link href="./assets/plugins/bootstrap/4.1.0/css/bootstrap.min.css" rel="stylesheet" />
   <link href="./assets/plugins/font-awesome/5.0/css/fontawesome-all.min.css" rel="stylesheet" />
   <link href="./assets/plugins/animate/animate.min.css" rel="stylesheet" />
-
-
-
   <link href="./assets/css/default/style.min.css" rel="stylesheet" />
   <link href="./assets/css/default/style-responsive.min.css" rel="stylesheet" />
   <link href="./assets/css/auxiliar.css" rel="stylesheet" id="theme" />
-
-
   <!-- ================== BEGIN PAGE LEVEL STYLE ================== -->
   <link href="./assets/plugins/gritter/css/jquery.gritter.css" rel="stylesheet" />
   <!-- ================== END PAGE LEVEL STYLE ================== -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="assets//img//logo/favicon-16x16.png">
-</head>
-
-<body>
-  <app-root></app-root>
 
   <!-- ================== BEGIN BASE JS ================== -->
   <script src="./assets/plugins/jquery/jquery-3.2.1.min.js"></script>
@@ -95,9 +83,17 @@
   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.10/jquery.mask.js"></script> -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-maskmoney/3.0.2/jquery.maskMoney.min.js"
     type="text/javascript"></script>
-
   <script src="node_modules/systemjs/dist/system-polyfills.js"></script>
 
+  <script>
+    localStorage.setItem('id_token', window.location.href)
+  </script>
+
+
+</head>
+
+<body>
+  <app-root></app-root>
   <script>
     $(document).ready(function () {
       App.init();
