--- a/src/index.html
+++ b/src/index.html
@@ -61,7 +61,7 @@
   <script src="./assets/plugins/DataTables/extensions/Buttons/js/buttons.bootstrap.min.js"></script>
   <script src="./assets/plugins/DataTables/extensions/Buttons/js/buttons.flash.min.js"></script>
   <script src="./assets/plugins/DataTables/extensions/Buttons/js/jszip.min.js"></script>
-  <script src="./assets/plugins/DataTables/extensions/Buttons/js/pdfmake.min.js"></script>
+  <!-- <script src="./assets/plugins/DataTables/extensions/Buttons/js/pdfmake.min.js"></script> -->
   <script src="./assets/plugins/DataTables/extensions/Buttons/js/vfs_fonts.min.js"></script>
   <script src="./assets/plugins/DataTables/extensions/Buttons/js/buttons.html5.min.js"></script>
   <script src="./assets/plugins/DataTables/extensions/Buttons/js/buttons.print.min.js"></script>
@@ -83,7 +83,7 @@
   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.10/jquery.mask.js"></script> -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-maskmoney/3.0.2/jquery.maskMoney.min.js"
     type="text/javascript"></script>
-  <script src="node_modules/systemjs/dist/system-polyfills.js"></script>
+  <!-- <script src="node_modules/systemjs/dist/system-polyfills.js"></script> -->
 
   <script>
     localStorage.setItem('id_token', window.location.href)
