--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=11" />
   <!-- ================== Ignorar Cache ================== -->
   <meta http-equiv="Last-Modified" content="0">
-  <meta http-equiv="Cache-Control" content="no-cache, mustrevalidate">
-  <meta http-equiv="Pragma" content="no-cache">
+  <meta http-equiv="cache-control" content="no-cache, must-revalidate, post-check=0, pre-check=0">
+  <meta http-equiv="expires" content="0">
+  <meta http-equiv="pragma" content="no-cache">
   <!-- ========================================================== -->
   <!-- ================== BEGIN BASE CSS STYLE ================== -->
   <link href="./assets/plugins/bootstrap/4.1.0/css/bootstrap.min.css" rel="stylesheet" />
